# rllm

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  architecture.md  bootstrap.sh  build_debug.sh  build_profile.sh  build_release.sh  check-train.sh  cmake_test_discovery_7eb7df59bf.json  cmake_test_discovery_bad6c54e20.json  comments.txt  create_tokenizer_map.py  env-wsl.sh  fulL_training.sh  full_training.sh  hipify.py  learn.sh  model_vocab_size.py  offloadize_common.py  prompt.sh  pytest.ini  run-codex.sh  run_codegen_tests.sh  runtime_vocab_size.py  todo.txt  token_map.json  train.sh  train_debug.sh  train_release.sh  training_postprocessor.py  transform_source.py  vulkan-config.json  vulkanize.py
.github/workflows/: cmake-multi-platform.yml
codegen/: __init__.py  codegen_ast.py  expression.py  grammar.lark  loop_statement.py  output  parfor_ast.py  parser.py  printer.py  statement_base.py  transforms.py  visitor.py
codegen/ast/: __init__.py  expression.py  program.py  statement.py  type.py  workgroup.py
codegen/testdata/: dump_matmul_A_B_C.cc  multi-arg.glsl  multi-arg.kernel  single-assign.kernel  triangular1.glsl  triangular1.kernel  with-wg2.kernel
codegen/visitors/: __init__.py  pretty_printer.py  resolve_array_indices.py  visitor.py  vulkan_cpp_stub_visitor.py  vulkan_kernel_visitor.py
configs/: coder-next.sh  gemma-codex.txt  gemmarun.sh
corpus/: iuring.cpp
docs/: fastfork.md  microbatching.md  multi-token-prediction.md  prompting.md  tokenizer.md  training.md  vulkan-runtime.md
include/: CircularBuffer.hpp  Corpus.hpp  IMemorySpace.hpp  InputLayer.hpp  IntermediateLayer.hpp  JsonTensorHelpers.hpp  LayerPrimitives.hpp  LearningRate.hpp  LogFormatting.hpp  NeuralNetwork.hpp  OptimizerDiagnostics.hpp  OutputLayer.hpp  Prompter.hpp  RLLM.hpp  RandomHelpers.hpp  Range.hpp  RuntimeConfig.hpp  SafetensorsTensorHelpers.hpp  Statistics.hpp  TextTrainer.hpp  TokenIDFormatter.hpp  Trainer.hpp  TransformerBlock.hpp  WeightInitialization.hpp  allocator.hpp  device_pointer.hpp  enum_iterator.hpp  enum_iterator1D.hpp  enum_iterator2D.hpp  enum_iterator3D.hpp  fixed_size_levels_rows_cols_matrix.hpp  fixed_size_matrix.hpp  fixed_size_obj_vector.hpp  fixed_size_triangular_matrix.hpp  fixed_size_vector.hpp  flexible_cols_matrix.hpp  flexible_rows_cols_levels_matrix.hpp  flexible_rows_cols_matrix.hpp  flexible_rows_matrix.hpp  flexible_size_matrix.hpp  (+15 more)
include/cpu/: cpu_data.hpp  cpu_fixed_levels_rows_cols_matrix.hpp  cpu_fixed_matrix.hpp  cpu_fixed_obj_vector.hpp  cpu_fixed_triangular_matrix.hpp  cpu_fixed_vector.hpp  cpu_flex_cols_matrix.hpp  cpu_flex_rows_cols_levels_matrix.hpp  cpu_flex_rows_cols_matrix.hpp  cpu_flex_rows_matrix.hpp  cpu_flex_size_matrix.hpp
include/fastfork/: circular_queue.hpp  fastfork.hpp
include/gpu/: gpu_fixed_levels_rows_cols_matrix.hpp  gpu_fixed_matrix.hpp  gpu_fixed_triangular_matrix.hpp  gpu_fixed_vector.hpp  gpu_flex_cols_matrix.hpp  gpu_flex_rows_cols_levels_matrix.hpp  gpu_flex_rows_cols_matrix.hpp  gpu_flex_rows_matrix.hpp  gpu_flex_size_matrix.hpp
include/memory_spaces/: hip_memory_space.hpp  host_memory_space.hpp  vulkan_memory_space.hpp
predefined_words/: cpp_keywords.txt
profile_training_data/: tiny.cpp
src/: CMakeLists.txt  Corpus.cpp  InputLayer.cc  IntermediateLayer.cc  NeuralNetwork.cc  OptimizerDiagnostics.cc  OutputLayer.cc  Prompter.cc  RLLM.cc  RuntimeConfig.cc  TextTrainer.cc  TextTrainerInternal.hpp  Trainer.cc  TransformerBlock.cc  generate_domain_replace_json.cc  main.cc  parallel.cc  print_enum_value.cc  rllm_vulkan_runtime.cpp  serialization.cc  tokenizer_map.cc  train_batch.cc  vecmath.cc  vulkan_kernel_calls.cpp  vulkan_memory_space.cpp
src/fastfork/: fastfork.cc
tests/: CMakeLists.txt  dump_matmul_A_B_C.cc  mocked_vulkan.hpp  test_codegen.py  test_codegen_vulkan_stubs.py  test_enum_iterator.cc  test_enum_iterator2D.cc  test_fastfork.cc  test_offload.cc  test_outputlayer.cc  test_packed_batch.cc  test_predictor.cc  test_rllm.cc  test_serialization.cc  test_tokenizer.py  test_vulkan_stubs.cc
tokenizer_training_data/: cpp_keywords.txt  pascal_keywords.txt  preprocessor.txt  preprocessor_keywords.txt
training_data/: flex.cpp  guaranteed_to_learn.cpp  include_sequence.cpp  iuring.cpp  preprocessor.cpp  simple.cpp
training_data0/: guaranteed_to_learn.cpp  include_a_training.cpp  include_sequence.cpp  preprocessor.cpp  simple.cpp  typical_c_code.c
training_data1/: effectivecpp.cpp  english.txt  esched.cpp  flex.cpp  iuring.cpp  lama.cpp  liburing-all.c  modern-cpp-patterns.cpp  preprocessor.cpp  self.cc  simple.cpp
